# split-text-regex

./: LICENSE  README.md  hie.yaml  split-text-regex.cabal
app/: Main.hs  Option.hs  Template.hs
