cabal-version:      2.4
name:               split-text-regex
version:            0
author:             Koji Miyazato
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         viercc@gmail.com

executable split-text
    main-is:          Main.hs
    other-modules:    Option, Template
    build-depends:    base >=4.14 && <5,
                      text,
                      containers,
                      array,
                      either,
                      directory,
                      regex-base,
                      regex-tdfa >= 1.3.1.1,
                      optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
